--- a/packages/tradie-template-default/package.json
+++ b/packages/tradie-template-default/package.json
@@ -1,4 +1,27 @@
 {
   "name": "tradie-template-default",
-  "version": "2.0.0-preview.1"
+  "version": "2.0.0-preview.1",
+  "dependencies": {
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "case-sensitive-paths-webpack-plugin": "^1.1.4",
+    "css-loader": "^0.25.0",
+    "ext-to-regex": "^0.1.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-name": "^0.1.0",
+    "find-and-read-package-json": "^1.0.0",
+    "json5": "^0.5.0",
+    "node-sass": "^3.10.1",
+    "postcss-loader": "^0.13.0",
+    "resolve": "^1.1.7",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack-resolve-short-path-plugin": "^1.0.4"
+  },
+  "peerDependencies": {
+    "webpack": "1 || ^2.1.0-beta"
+  }
 }
