--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -5,5 +5,8 @@
     "chalk": "^1.1.3",
     "clear": "0.0.1",
     "lodash.uniq": "^4.5.0"
+  },
+  "peerDependencies": {
+    "webpack": "1 || ^2.1.0-beta"
   }
 }
