--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "clear": "0.0.1",
-    "lodash.uniq": "^4.5.0"
+    "lodash.uniq": "^4.5.0",
+    "webpack-dev-server": "^2.1.0-beta.8"
   },
   "peerDependencies": {
     "webpack": "1 || ^2.1.0-beta"
