--- a/packages/tradie-webpack-config/package.json
+++ b/packages/tradie-webpack-config/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0-preview.1",
   "dependencies": {
     "ext-to-regex": "^0.1.0",
+    "lodash.mergewith": "^4.6.0",
     "resolve": "^1.1.7"
   },
   "peerDependencies": {
