--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -1,6 +1,11 @@
 {
   "name": "tradie",
+  "description": "A semi-opinionated build tool for frontend projects. Use it to lint, bundle and test your script and style files.",
   "version": "2.0.0-preview.1",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:jameslnewell/tradie.git"
+  },
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
@@ -9,5 +14,6 @@
   },
   "bin": {
     "tradie-v2": "./bin/tradie.js"
-  }
+  },
+  "license": "MIT"
 }
