--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "devDependencies": {
+    "flow-bin": "^0.33.0",
     "lerna": "2.0.0-beta.30",
     "webpack": "^2.1.0-beta.25"
+  },
+  "scripts": {
+    "flow": "flow"
   }
 }
