--- a/packages/tradie-webpack-config/package.json
+++ b/packages/tradie-webpack-config/package.json
@@ -2,6 +2,7 @@
   "name": "tradie-webpack-config",
   "version": "2.0.0-preview.1",
   "dependencies": {
+    "case-sensitive-paths-webpack-plugin": "^1.1.4",
     "ext-to-regex": "^0.1.0",
     "lodash.mergewith": "^4.6.0",
     "resolve": "^1.1.7"
