--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "devDependencies": {
     "flow-bin": "^0.33.0",
     "lerna": "2.0.0-beta.30",
-    "webpack": "^2.2.0-rc"
+    "webpack": "^2.2.0"
   },
   "scripts": {
     "flow": "flow"
   },
   "dependencies": {
-    "lerna": "^1.1.3"
+    "lerna": "^1.1.3",
+    "webpack": "^2.2.0"
   }
 }
