--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -16,6 +16,6 @@
     "webpack-hot-middleware": "^2.13.0"
   },
   "peerDependencies": {
-    "webpack": "^1 || ^2.2.0-rc"
+    "webpack": "^2.2.0"
   }
 }
