--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,7 @@
 {
-  "lerna": "2.0.0-beta.30",
-  "version": "2.0.0-preview.18"
+  "lerna": "2.0.0-beta.32",
+  "version": "2.0.0-preview.22",
+  "packages": [
+    "packages/*"
+  ]
 }
