--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "flow": "flow"
   },
   "dependencies": {
-    "lerna": "^1.1.3",
+    "lerna": "2.0.0-beta.32",
     "webpack": "^2.2.0"
   }
 }
