--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -2,10 +2,7 @@
   "name": "tradie",
   "description": "A semi-opinionated build tool for frontend projects. Use it to lint, bundle and test your script and style files.",
   "version": "2.0.0-preview.29",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:jameslnewell/tradie.git"
-  },
+  "repository": "jameslnewell/tradie-v2",
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
