--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -11,6 +11,7 @@
     "promised-del": "^1.0.2",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
+    "server-destroy": "^1.0.1",
     "wait-for-event": "^1.0.0"
   },
   "peerDependencies": {
