initial HMR working

--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -16,5 +16,8 @@
   },
   "peerDependencies": {
     "webpack": "^2.2.0"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^0.17.3"
   }
 }
