--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -7,12 +7,15 @@
     "connect": "^3.5.0",
     "debug": "^2.2.0",
     "detect-port": "^1.0.1",
+    "http-proxy-middleware": "^0.17.4",
     "lodash.uniq": "^4.5.0",
     "promised-del": "^1.0.2",
     "serve-index": "^1.8.0",
     "serve-static": "^1.11.1",
     "server-destroy": "^1.0.1",
-    "wait-for-event": "^1.0.0"
+    "wait-for-event": "^1.0.0",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "peerDependencies": {
     "webpack": "^2.2.0"
