--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -4,6 +4,7 @@
   "description": "React app.",
   "repository": "jameslnewell/tradie-template-react-app",
   "dependencies": {
+    "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
@@ -11,10 +12,9 @@
     "babel-plugin-transform-object-rest-spread": "^6.13.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-node-externals": "^1.5.4"
+    "css-loader": "^0.26.2",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1"
   },
   "license": "MIT"
 }
