--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -4,15 +4,23 @@
   "description": "React app.",
   "repository": "jameslnewell/tradie-template-react-app",
   "dependencies": {
+    "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-styled-components": "^1.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-do-expressions": "^6.13.0",
     "babel-plugin-transform-object-rest-spread": "^6.13.0",
-    "babel-preset-latest": "^6.22.0",
+    "babel-plugin-transform-react-jsx-self": "^6.22.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.2",
+    "ext-to-regex": "^0.1.0",
+    "file-loader": "^0.10.1",
+    "null-loader": "^0.1.1",
+    "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   },
