--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -18,11 +18,13 @@
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.2",
     "ext-to-regex": "^0.1.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-node-externals": "^1.5.4"
   },
   "license": "MIT"
 }
