--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -24,7 +24,8 @@
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1",
-    "webpack-node-externals": "^1.5.4"
+    "webpack-node-externals": "^1.5.4",
+    "tradie-webpack-utils": "^2.0.0-preview.29"
   },
   "license": "MIT"
 }
