--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
+    "babili-webpack-plugin": "0.0.11",
     "css-loader": "^0.26.2",
     "ext-to-regex": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
@@ -23,9 +24,9 @@
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
+    "tradie-webpack-utils": "^2.0.0-preview.1",
     "webpack": "^2.2.1",
-    "webpack-node-externals": "^1.5.4",
-    "tradie-webpack-utils": "^2.0.0-preview.1"
+    "webpack-node-externals": "^1.5.4"
   },
   "license": "MIT"
 }
