--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.3.2",
     "babel-plugin-styled-components": "^1.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
