--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -8,6 +8,7 @@
     "debug": "^2.2.0",
     "detect-port": "^1.0.1",
     "http-proxy-middleware": "^0.17.4",
+    "jest": "^19.0.2",
     "lodash.uniq": "^4.5.0",
     "promised-del": "^1.0.2",
     "serve-index": "^1.8.0",
