--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -8,6 +8,7 @@
     "babel-core": "^6.23.1",
     "babel-jest": "^19.0.0",
     "babel-loader": "next",
+    "babel-plugin-dynamic-import-node": "^1.0.0",
     "babel-plugin-styled-components": "^1.0.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
