--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -19,8 +19,9 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "babili-webpack-plugin": "0.0.11",
-    "css-loader": "^0.26.2",
-    "eslint-config-jameslnewell": "^3.0.0-preview.1",
+    "css-loader": "^0.27.2",
+    "eslint": "^3.17.1",
+    "eslint-config-jameslnewell": "^3.0.0-preview.2",
     "eslint-loader": "^1.6.3",
     "ext-to-regex": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
