--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -30,6 +30,7 @@
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
     "tradie-webpack-utils": "^2.0.0-preview.1",
+    "trailing-slash-it": "^0.3.0",
     "webpack": "^2.2.1",
     "webpack-node-externals": "^1.5.4"
   },
