--- a/packages/tradie-webpack-utils/package.json
+++ b/packages/tradie-webpack-utils/package.json
@@ -4,5 +4,7 @@
   "peerDependencies": {
     "webpack": "^2.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash.difference": "^4.5.0"
+  }
 }
