--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -26,6 +26,7 @@
     "ext-to-regex": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "http-proxy-middleware": "^0.17.4",
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.13.2",
