--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "webpack": "^2.2.0"
   },
   "scripts": {
+    "clean": "lerna clean",
     "bootstrap": "lerna bootstrap",
     "check-deps": "lerna exec --concurrency 1 -- npm-check -u"
   }
