--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tradie-webpack-scripts",
   "version": "4.0.0-preview.2",
-  "description": "Scripts for compiling bundles with Webpack.",
+  "description": "Scripts for building, serving and testing using Webpack and Jest.",
   "dependencies": {
     "chalk": "^1.1.3",
     "connect": "^3.5.0",
