--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -1,8 +1,18 @@
 {
   "name": "tradie",
-  "description": "A semi-opinionated build tool for frontend projects. Use it to lint, bundle and test your script and style files.",
-  "version": "4.0.0-preview.2",
-  "repository": "jameslnewell/tradie-v2",
+  "version": "4.0.0-preview.3",
+  "description": "A CLI for building web apps. Like create-react-app but configurable via templates.",
+  "keywords": [
+    "webpack",
+    "hot-reloading",
+    "jest",
+    "build",
+    "test",
+    "nwb",
+    "create-react-app",
+    "crap"
+  ],
+  "repository": "jameslnewell/tradie-v4",
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
