--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-template-react-app",
-  "version": "1.0.0-preview.5",
+  "version": "4.0.0-rc.0",
   "description": "React app.",
   "repository": "jameslnewell/tradie-template-react-app",
   "dependencies": {
@@ -31,7 +31,7 @@
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
-    "tradie-webpack-utils": "^4.0.0-preview.1",
+    "tradie-webpack-utils": "^4.0.0-rc.0",
     "trailing-slash-it": "^0.3.0",
     "webpack": "^2.2.1",
     "webpack-node-externals": "^1.5.4"
