--- a/packages/tradie-template-react-static-site/package.json
+++ b/packages/tradie-template-react-static-site/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-template-react-static-site",
-  "version": "1.0.0-preview.22",
+  "version": "4.0.0-rc.0",
   "description": "Tradie template for building static sites with React.",
   "repository": "jameslnewell/tradie-template-react-static-site",
   "peerDependencies": {
@@ -35,7 +35,7 @@
     "serve-static": "^1.12.1",
     "static-react-render-webpack-plugin": "^0.6.0",
     "style-loader": "^0.16.0",
-    "tradie-webpack-utils": "^4.0.0-preview.1",
+    "tradie-webpack-utils": "^4.0.0-rc.0",
     "trailing-slash-it": "^0.3.0",
     "webpack": "^2.3.2",
     "webpack-node-externals": "^1.5.4"
