--- a/packages/tradie-webpack-config/package.json
+++ b/packages/tradie-webpack-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-webpack-config",
-  "version": "2.0.0-preview.28",
+  "version": "4.0.0-rc.0",
   "dependencies": {
     "case-sensitive-paths-webpack-plugin": "^2.0.0",
     "ext-to-regex": "^0.1.0",
