--- a/packages/tradie-template-react-static-site/package.json
+++ b/packages/tradie-template-react-static-site/package.json
@@ -2,7 +2,7 @@
   "name": "tradie-template-react-static-site",
   "version": "4.0.0-rc.0",
   "description": "Tradie template for building static sites with React.",
-  "repository": "jameslnewell/tradie-template-react-static-site",
+  "repository": "jameslnewell/tradie-v4",
   "peerDependencies": {
     "react": "^0.14 || ^15",
     "react-dom": "^0.14 || ^15"
