--- a/packages/tradie-template-react-app/package.json
+++ b/packages/tradie-template-react-app/package.json
@@ -7,7 +7,7 @@
     "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
     "babel-jest": "^19.0.0",
-    "babel-loader": "next",
+    "babel-loader": "7.0.0",
     "babel-plugin-dynamic-import-node": "^1.0.0",
     "babel-plugin-styled-components": "^1.0.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -30,7 +30,7 @@
     "http-proxy-middleware": "^0.17.4",
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
-    "style-loader": "^0.16.1",
+    "style-loader": "^0.17.0",
     "tradie-webpack-utils": "^4.0.0-rc.4",
     "trailing-slash-it": "^0.3.0",
     "webpack": "^2.2.1",
