--- a/packages/tradie-template-react-static-site/package.json
+++ b/packages/tradie-template-react-static-site/package.json
@@ -11,7 +11,7 @@
     "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
     "babel-jest": "^19.0.0",
-    "babel-loader": "next",
+    "babel-loader": "7.0.0",
     "babel-plugin-dynamic-import-node": "^1.0.0",
     "babel-plugin-styled-components": "^1.0.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -34,7 +34,7 @@
     "postcss-loader": "^1.3.3",
     "serve-static": "^1.12.1",
     "static-react-render-webpack-plugin": "^0.6.0",
-    "style-loader": "^0.16.0",
+    "style-loader": "^0.17.0",
     "tradie-webpack-utils": "^4.0.0-rc.4",
     "trailing-slash-it": "^0.3.0",
     "webpack": "^2.3.2",
