--- a/packages/tradie-template-react-static-site/package.json
+++ b/packages/tradie-template-react-static-site/package.json
@@ -32,6 +32,8 @@
     "file-loader": "^0.11.1",
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
+    "react-test-renderer": "^15.5.4",
+    "serve-index": "^1.8.0",
     "serve-static": "^1.12.1",
     "static-react-render-webpack-plugin": "^0.6.0",
     "style-loader": "^0.17.0",
