--- a/packages/tradie-webpack-scripts/package.json
+++ b/packages/tradie-webpack-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-webpack-scripts",
-  "version": "4.0.0-rc.6",
+  "version": "4.0.0",
   "description": "Scripts for building, serving and testing using Webpack and Jest.",
   "dependencies": {
     "chalk": "^1.1.3",
