--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "eslint": "^3.19.0",
     "eslint-config-jameslnewell": "^3.0.0-preview.3",
     "husky": "^0.13.4",
-    "lerna": "^2.0.0-rc.4",
+    "lerna": "2.0.0-rc.5",
     "lint-staged": "^3.4.0",
     "prettier": "^1.1.0",
     "validate-commit-msg": "^2.12.1",
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "clean": "lerna clean",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "lerna bootstrap --npm-client=yarn",
     "lint": "lerna exec -- eslint --ext .js -c eslint-config-jameslnewell/node .",
     "dep-check": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "git-cz",
@@ -31,5 +31,8 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "publishConfig": {
+    "tag": "v5"
   }
 }
