--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -15,9 +15,10 @@
   "repository": "jameslnewell/tradie-v4",
   "dependencies": {
     "chalk": "^1.1.3",
-    "commander": "^2.9.0",
     "find-and-read-package-json": "^1.0.0",
-    "tradie-webpack-scripts": "^4.0.2"
+    "resolve": "^1.3.3",
+    "tradie-webpack-scripts": "^4.0.2",
+    "yargs": "^8.0.1"
   },
   "bin": {
     "tradie": "./bin/tradie.js"
