--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "lerna": "2.0.0-rc.1",
-  "version": "4.0.4",
+  "lerna": "2.0.0-rc.4",
+  "version": "independent",
   "packages": [
     "packages/*"
   ]
