feat: downgrade versions and change structure
change describe to cli

--- a/packages/tradie-template-node-package/package.json
+++ b/packages/tradie-template-node-package/package.json
@@ -5,7 +5,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-flow": "^6.23.0",
+    "tradie": "^4.0.0",
     "tradie-scripts-node-package": "^1.0.0",
-    "tradie-jest-utils": "1.0.0"
+    "tradie-jest-utils": "0.1.0"
   }
 }
