--- a/packages/tradie-template-node-package-example/package.json
+++ b/packages/tradie-template-node-package-example/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tradie-template-node-package-example",
-  "version": "1.0.0",
+  "private": true,
   "devDependencies": {
-    "tradie-template-node-package": "^0.1.0"
+    "tradie-template-node-package": "^1.0.0"
   },
   "scripts": {
     "help": "tradie --help",
