--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "lerna exec -- eslint --ext .js -c eslint-config-jameslnewell/node .",
     "dep-check": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "git-cz",
-    "publish": "lerna publish --conventional-commits -m 'chore: publish'",
+    "publish": "lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next",
     "commitmsg": "validate-commit-msg",
     "precommit": "lint-staged",
     "xprepublish": "npm run lint"
@@ -31,8 +31,5 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "publishConfig": {
-    "tag": "v5"
   }
 }
