--- a/packages/tradie-template-node-package-example/package.json
+++ b/packages/tradie-template-node-package-example/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tradie-template-node-package-example",
+  "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "tradie-template-node-package": "^1.0.0"
