--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "commit": "git-cz",
     "publish": "lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next",
     "commitmsg": "validate-commit-msg",
-    "precommit": "lint-staged",
+    "xprecommit": "lint-staged",
     "xprepublish": "npm run lint"
   },
   "lint-staged": {
