--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -5,10 +5,10 @@
     "lodash.debounce": "^4.0.8",
     "lodash.padstart": "^4.6.1",
     "lodash.trim": "^4.5.1",
-    "tradie-babel-utils": "^1.0.0",
-    "tradie-cli-utils": "^1.0.0",
-    "tradie-file-utils": "^1.0.0",
-    "tradie-flow-utils": "^1.0.0",
-    "tradie-jest-utils": "^1.0.0"
+    "tradie-utils-babel": "^1.0.0",
+    "tradie-utils-cli": "^1.0.0",
+    "tradie-utils-file": "^1.0.0",
+    "tradie-utils-flow": "^1.0.0",
+    "tradie-utils-jest": "^1.0.0"
   }
 }
