--- a/packages/tradie-template-node-package/package.json
+++ b/packages/tradie-template-node-package/package.json
@@ -6,7 +6,7 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-flow": "^6.23.0",
     "tradie": "^5.0.0",
-    "tradie-jest-utils": "^1.0.0",
+    "tradie-utils-jest": "^1.0.0",
     "tradie-scripts-node-package": "^1.0.0"
   }
 }
