--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -1,7 +1,9 @@
 {
   "name": "tradie-scripts-node-package",
+  "description": "A tradie template for creating NodeJS packages.",
   "version": "1.0.1",
   "dependencies": {
+    "del": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.padstart": "^4.6.1",
     "lodash.trim": "^4.5.1",
@@ -10,5 +12,6 @@
     "tradie-utils-file": "^1.0.1",
     "tradie-utils-flow": "^1.0.1",
     "tradie-utils-jest": "^1.0.1"
-  }
+  },
+  "license": "MIT"
 }
