--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "lerna exec -- eslint --ext .js -c eslint-config-jameslnewell/node .",
     "dep-check": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "git-cz",
-    "publish": "lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next",
+    "publish": "lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next --canary",
     "commitmsg": "validate-commit-msg",
     "xprecommit": "lint-staged",
     "xprepublish": "npm run lint"
