feat: transpiled to es6+

--- a/packages/tradie-utils-cli/package.json
+++ b/packages/tradie-utils-cli/package.json
@@ -1,4 +1,15 @@
 {
   "name": "tradie-utils-cli",
-  "version": "1.0.1"
+  "version": "1.0.1",
+  "main": "lib/index.js",
+  "files": "lib",
+  "devDependencies": {
+    "tradie-template-node-package": "^1.0.1"
+  },
+  "scripts": {
+    "clean": "tradie clean",
+    "build": "tradie build",
+    "watch": "tradie build --watch",
+    "test": "tradie test"
+  }
 }
