--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -13,15 +13,22 @@
     "crap"
   ],
   "repository": "jameslnewell/tradie-v4",
+  "bin": {
+    "tradie": "./lib/tradie.js"
+  },
   "dependencies": {
     "chalk": "^1.1.3",
-    "find-and-read-package-json": "^1.0.0",
     "resolve": "^1.3.3",
-    "tradie-webpack-scripts": "^5.0.0",
     "yargs": "^8.0.1"
   },
-  "bin": {
-    "tradie": "./bin/tradie.js"
+  "devDependencies": {
+    "tradie-template-node-package": "1.0.1"
+  },
+  "scripts": {
+    "clean": "node ./lib/tradie.js clean",
+    "build": "node ./lib/tradie.js build",
+    "watch": "node ./lib/tradie.js build --watch",
+    "test": "node ./lib/tradie.js test"
   },
   "license": "MIT"
 }
