fix: fix files included in package

--- a/packages/tradie-utils-cli/package.json
+++ b/packages/tradie-utils-cli/package.json
@@ -2,7 +2,7 @@
   "name": "tradie-utils-cli",
   "version": "1.0.1",
   "main": "lib/index.js",
-  "files": "lib",
+  "files": ["lib"],
   "devDependencies": {
     "tradie-template-node-package": "^1.0.1"
   },
