--- a/packages/tradie-utils-flow/package.json
+++ b/packages/tradie-utils-flow/package.json
@@ -2,12 +2,7 @@
   "name": "tradie-utils-flow",
   "version": "1.0.1",
   "dependencies": {
-    "lodash.padstart": "^4.6.1"
-  },
-  "peerDependencies": {
-    "flow-bin": "0.47.0"
-  },
-  "devDependencies": {
+    "lodash.padstart": "^4.6.1",
     "flow-bin": "^0.48.0"
   }
 }
