fix: remove generated files, ignore generated files and fixed which files are included in package

--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -13,8 +13,9 @@
     "crap"
   ],
   "repository": "jameslnewell/tradie-v4",
+  "files": ["lib"],
   "bin": {
-    "tradie": "./lib/tradie.js"
+    "tradie": "lib/tradie.js"
   },
   "dependencies": {
     "chalk": "^1.1.3",
