fix: removed the builder, split the reporting into tradie-utils-reporter

--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -4,15 +4,12 @@
   "version": "1.0.1",
   "dependencies": {
     "del": "^3.0.0",
-    "lodash.debounce": "^4.0.8",
-    "lodash.padstart": "^4.6.1",
-    "lodash.trim": "^4.5.1",
     "tradie-utils-babel": "^1.0.1",
-    "tradie-utils-cli": "^1.0.1",
     "tradie-utils-file": "^1.0.1",
     "tradie-utils-flow": "^1.0.1",
     "tradie-utils-jest": "^1.0.1",
-    "tradie-utils-eslint": "^1.0.0"
+    "tradie-utils-eslint": "^1.0.0",
+    "tradie-utils-reporter": "^1.0.0"
   },
   "license": "MIT"
 }
