--- a/packages/tradie-utils-cli/package.json
+++ b/packages/tradie-utils-cli/package.json
@@ -1,10 +1,12 @@
 {
   "name": "tradie-utils-cli",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "lib/index.js",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
-    "tradie-template-node-package": "^1.0.1"
+    "tradie-template-node-package": "^1.1.0"
   },
   "scripts": {
     "clean": "tradie clean",
