--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie",
-  "version": "5.0.0",
+  "version": "5.1.0",
   "description": "A CLI for building web apps. Like create-react-app but configurable via templates.",
   "keywords": [
     "webpack",
@@ -13,7 +13,9 @@
     "crap"
   ],
   "repository": "jameslnewell/tradie-v4",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "bin": {
     "tradie": "lib/tradie.js"
   },
