--- a/packages/tradie-template-react-component/package.json
+++ b/packages/tradie-template-react-component/package.json
@@ -1,5 +1,6 @@
 {
   "name": "tradie-template-react-component",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "babel-core": "^6.24.1",
