--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
+  "engines": {
+    "yarn": "~1.0.20"
+  },
   "devDependencies": {
     "commitizen": "^2.9.6",
     "husky": "^0.13.4",
     "lerna": "2.0.0-rc.5",
     "lint-staged": "^3.4.0",
     "prettier": "^1.1.0",
+    "tradie-template-node-package": "^1.1.3",
     "validate-commit-msg": "^2.12.1"
   },
   "scripts": {
-    "clean": "lerna clean",
-    "bootstrap": "lerna bootstrap --npm-client=yarn",
+    "clean": "lerna run clean && lerna clean",
+    "bootstrap": "lerna bootstrap --npm-client=yarn && node scripts/symlink-tradie.js",
     "dep-check": "lerna exec --concurrency 1 -- npm-check -u",
     "commit": "git-cz",
     "build": "lerna run build",
@@ -28,5 +32,8 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "fs-extra": "^3.0.1"
   }
 }
