--- a/packages/tradie-template-node-package-example/package.json
+++ b/packages/tradie-template-node-package-example/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.6",
   "private": true,
   "devDependencies": {
-    "tradie-template-node-package": "^1.1.3"
+    "tradie": "*",
+    "tradie-template-node-package": "*"
   },
   "scripts": {
     "help": "tradie --help",
