--- a/packages/tradie-utils-babel/package.json
+++ b/packages/tradie-utils-babel/package.json
@@ -10,7 +10,7 @@
     "mkdirp": "^0.5.1"
   },
   "devDependencies": {
-    "tradie-template-node-package": "^1.1.3"
+    "tradie-template-node-package": "*"
   },
   "scripts": {
     "clean": "tradie clean",
