--- a/packages/tradie-utils-cli/package.json
+++ b/packages/tradie-utils-cli/package.json
@@ -6,7 +6,7 @@
     "lib"
   ],
   "devDependencies": {
-    "tradie-template-node-package": "^1.1.3"
+    "tradie-template-node-package": "*"
   },
   "scripts": {
     "clean": "tradie clean",
