--- a/packages/tradie-utils-eslint/package.json
+++ b/packages/tradie-utils-eslint/package.json
@@ -11,7 +11,7 @@
     "text-table": "^0.2.0"
   },
   "devDependencies": {
-    "tradie-template-node-package": "^1.1.3"
+    "tradie-template-node-package": "*"
   },
   "scripts": {
     "clean": "tradie clean",
