--- a/packages/tradie-utils-reporter/package.json
+++ b/packages/tradie-utils-reporter/package.json
@@ -13,7 +13,7 @@
     "tradie-utils-cli": "^1.2.2"
   },
   "devDependencies": {
-    "tradie-template-node-package": "^1.1.3"
+    "tradie-template-node-package": "*"
   },
   "scripts": {
     "clean": "tradie clean",
