--- a/packages/tradie-template-node-package/package.json
+++ b/packages/tradie-template-node-package/package.json
@@ -2,6 +2,7 @@
   "name": "tradie-template-node-package",
   "version": "1.1.3",
   "dependencies": {
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.5.1",
