--- a/packages/tradie-utils-jest/package.json
+++ b/packages/tradie-utils-jest/package.json
@@ -1,10 +1,23 @@
 {
   "name": "tradie-utils-jest",
   "version": "1.0.3",
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "babel-core": "^6.24.1",
     "glob": "^7.1.2",
     "jest": "^20.0.4",
     "mkdirp": "^0.5.1"
+  },
+  "devDependencies": {
+    "tradie-template-node-package": "*"
+  },
+  "scripts": {
+    "clean": "tradie clean",
+    "build": "tradie build",
+    "watch": "tradie build --watch",
+    "test": "tradie test"
   }
 }
