--- a/packages/tradie-template-node-package/package.json
+++ b/packages/tradie-template-node-package/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tradie-template-node-package",
   "version": "1.1.3",
+  "registry": "jameslnewell/tradie-v4",
   "dependencies": {
     "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
