--- a/packages/tradie-utils-babel/package.json
+++ b/packages/tradie-utils-babel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-utils-babel",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "main": "lib/index.js",
   "files": [
     "lib"
@@ -10,7 +10,7 @@
     "mkdirp": "^0.5.1"
   },
   "devDependencies": {
-    "tradie-template-node-package": "*"
+    "tradie-template-node-package": "^1.2.0"
   },
   "scripts": {
     "clean": "tradie clean",
