--- a/packages/tradie-utils-cli/package.json
+++ b/packages/tradie-utils-cli/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tradie-utils-cli",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
   "devDependencies": {
-    "tradie-template-node-package": "*"
+    "tradie-template-node-package": "^1.2.0"
   },
   "scripts": {
     "clean": "tradie clean",
