--- a/packages/tradie-utils-reporter/package.json
+++ b/packages/tradie-utils-reporter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-utils-reporter",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "main": "lib/index.js",
   "files": [
     "lib"
@@ -10,10 +10,10 @@
     "eslint": "^4.0.0",
     "lodash.padstart": "^4.6.1",
     "lodash.trim": "^4.5.1",
-    "tradie-utils-cli": "^1.2.2"
+    "tradie-utils-cli": "^1.2.3"
   },
   "devDependencies": {
-    "tradie-template-node-package": "*"
+    "tradie-template-node-package": "^1.2.0"
   },
   "scripts": {
     "clean": "tradie clean",
