fix: change to be built by tradie, use reporter for cleaning, fix linting

--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -2,6 +2,11 @@
   "name": "tradie-scripts-node-package",
   "description": "A tradie template for creating NodeJS packages.",
   "version": "1.1.5",
+  "repository": "jameslnewell/tradie-v4",
+  "files": [
+    "lib"
+  ],
+  "tradie-template": "tradie-template-node-package",
   "dependencies": {
     "del": "^3.0.0",
     "tradie-utils-babel": "^1.2.4",
@@ -10,6 +15,12 @@
     "tradie-utils-flow": "^1.2.2",
     "tradie-utils-jest": "^1.0.5",
     "tradie-utils-reporter": "^1.4.0"
+  },
+  "scripts": {
+    "clean": "tradie clean",
+    "build": "tradie build",
+    "watch": "tradie build --watch",
+    "test": "tradie test"
   },
   "license": "MIT"
 }
