--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -24,9 +24,7 @@
     "resolve": "^1.3.3",
     "yargs": "^8.0.1"
   },
-  "devDependencies": {
-    "tradie-template-node-package": "^1.3.0"
-  },
+  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build && chmod 0755 ./lib/tradie.js",
