fix: fix dogfooding
every package uses a previous version of the tradie-template-node-package installed to the root...
except example packages which ise the current version symlinked locally.

--- a/packages/tradie-utils-cli/package.json
+++ b/packages/tradie-utils-cli/package.json
@@ -5,9 +5,7 @@
   "files": [
     "lib"
   ],
-  "devDependencies": {
-    "tradie-template-node-package": "^1.3.0"
-  },
+  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
