--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   },
   "devDependencies": {
     "commitizen": "^2.9.6",
+    "fs-extra": "^3.0.1",
     "husky": "^0.13.4",
     "lerna": "2.0.0-rc.5",
     "lint-staged": "^3.4.0",
     "prettier": "^1.1.0",
-    "tradie-template-node-package": "^1.1.3",
+    "tradie-template-node-package": "^1.3.0",
     "validate-commit-msg": "^2.12.1"
   },
   "scripts": {
@@ -18,7 +19,7 @@
     "commit": "git-cz",
     "build": "lerna run build",
     "test": "lerna run test",
-    "publish": "npm run build && lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next",
+    "publish": "npm run build && npm run test && lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next",
     "commitmsg": "validate-commit-msg",
     "precommit": "lint-staged"
   },
@@ -32,8 +33,5 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "fs-extra": "^3.0.1"
   }
 }
