--- a/packages/tradie-utils-babel/package.json
+++ b/packages/tradie-utils-babel/package.json
@@ -9,9 +9,7 @@
     "babel-core": "^6.24.1",
     "mkdirp": "^0.5.1"
   },
-  "devDependencies": {
-    "tradie-template-node-package": "^1.3.0"
-  },
+  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
