--- a/packages/tradie-utils-eslint/package.json
+++ b/packages/tradie-utils-eslint/package.json
@@ -10,9 +10,7 @@
     "eslint": "^4.0.0",
     "text-table": "^0.2.0"
   },
-  "devDependencies": {
-    "tradie-template-node-package": "^1.3.0"
-  },
+  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
