--- a/packages/tradie-utils-jest/package.json
+++ b/packages/tradie-utils-jest/package.json
@@ -11,9 +11,7 @@
     "jest": "^20.0.4",
     "mkdirp": "^0.5.1"
   },
-  "devDependencies": {
-    "tradie-template-node-package": "^1.3.0"
-  },
+  "tradie-template": "tradie-template-node-package",
   "scripts": {
     "clean": "tradie clean",
     "build": "tradie build",
