--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2
 jobs:
   build:
-    # node: 
-    #   version: 6
+    docker:
+      - image: node:6
     steps:
       - checkout
       - run:
