--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lerna": "2.0.0-rc.5",
     "lint-staged": "^3.4.0",
     "prettier": "^1.1.0",
-    "tradie-template-node-package": "^1.3.0",
+    "tradie-template-node-package": "next",
     "validate-commit-msg": "^2.12.1"
   },
   "scripts": {
@@ -19,7 +19,8 @@
     "commit": "git-cz",
     "build": "lerna run build",
     "test": "lerna run test",
-    "publish": "npm run build && npm run test && lerna publish --conventional-commits -m 'chore: publish' --npm-tag=next",
+    "publish": "lerna publish --conventional-commits --canary -m 'chore: publish' --npm-tag=next",
+    "prepublish": "yarn run build && yarn run test",
     "commitmsg": "validate-commit-msg",
     "precommit": "lint-staged"
   },
