--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 cache: yarn
 
 install:
-  - "curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.25.4"
+  - curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version 0.25.4
   - yarn
   - yarn run bootstrap
 
