--- a/packages/tradie-utils-flow/package.json
+++ b/packages/tradie-utils-flow/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "flow-bin": "^0.48.0",
+    "fs-extra": "^3.0.1",
     "lodash.padstart": "^4.6.1"
   }
 }
