--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -11,10 +11,9 @@
     "del": "^3.0.0",
     "tradie-utils-babel": "^2.0.0",
     "tradie-utils-eslint": "^2.0.0",
-    "tradie-utils-file": "^2.0.0",
     "tradie-utils-flow": "^2.0.0",
     "tradie-utils-jest": "^2.0.0",
-    "tradie-utils-reporter": "^2.0.0"
+    "tradie-utils-processor": "^2.0.0"
   },
   "scripts": {
     "clean": "tradie clean",
