refactor: update how processor, linter, typechecker and all the things work

--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -12,6 +12,7 @@
     "tradie-utils-babel": "^2.0.0",
     "tradie-utils-eslint": "^2.0.0",
     "tradie-utils-flow": "^2.0.0",
+    "tradie-utils-match": "^2.0.0",
     "tradie-utils-jest": "^2.0.0",
     "tradie-utils-reporter": "^2.0.0",
     "tradie-utils-processor": "^2.0.0"
