--- a/packages/tradie-utils-flow/package.json
+++ b/packages/tradie-utils-flow/package.json
@@ -1,10 +1,25 @@
 {
   "name": "tradie-utils-flow",
   "version": "2.0.0",
+  "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "chalk": "^1.1.3",
     "flow-bin": "^0.48.0",
     "fs-extra": "^3.0.1",
-    "lodash.padstart": "^4.6.1"
+    "sprintf-js": "^1.1.1"
+  },
+  "tradie-template": "tradie-template-node-package",
+  "scripts": {
+    "lint": "tradie lint",
+    "clean": "tradie clean",
+    "build": "tradie build",
+    "watch": "tradie build --watch",
+    "test": "tradie test"
+  },
+  "devDependencies": {
+    "strip-ansi": "^4.0.0"
   }
 }
