--- a/packages/tradie-scripts-webpack/package.json
+++ b/packages/tradie-scripts-webpack/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "tradie-webpack-scripts",
-  "version": "6.0.0",
+  "name": "tradie-scripts-webpack",
+  "version": "2.0.0",
   "description": "Scripts for building, serving and testing using Webpack and Jest.",
+  "files": ["lib"],
   "dependencies": {
     "chalk": "^1.1.3",
     "connect": "^3.5.0",
@@ -13,11 +14,20 @@
     "promised-del": "^1.0.2",
     "server-destroy": "^1.0.1",
     "wait-for-event": "^1.0.0",
+    "webpack": "^3.0.0",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   },
   "peerDependencies": {
     "webpack": "^2.2.0"
   },
+  "scripts": {
+    "clean": "tradie clean",
+    "lint": "tradie lint",
+    "build": "tradie build",
+    "watch": "tradie build --watch",
+    "test": "tradie test"
+  },
+  "tradie-template": "tradie-template-node-package",
   "license": "MIT"
 }
