refactor: refactored scripts to use new script paths

--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tradie-scripts-node-package",
-  "description": "A tradie template for creating NodeJS packages.",
+  "description": "Scripts for creating NodeJS packages.",
   "version": "2.0.0",
   "repository": "jameslnewell/tradie-v4",
   "files": [
