refactor: got a working example

--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,9 @@
   ],
   "npmClient": "yarn",
   "command": {
+    "bootstrap": {
+      "hoist": []
+    },
     "publish": {
       "npmTag": "next",
       "message": "chore: publish"
