--- a/packages/tradie-example-react-static-site/package.json
+++ b/packages/tradie-example-react-static-site/package.json
@@ -11,5 +11,9 @@
     "build": "tradie build",
     "serve": "tradie serve",
     "test": "tradie test"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
