--- a/packages/tradie/package.json
+++ b/packages/tradie/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "resolve": "^1.3.3",
-    "yargs": "^8.0.1"
+    "yargs": "^8.0.1",
+    "babel-polyfill":"^6.23.0"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
