--- a/packages/tradie-utils-babel/package.json
+++ b/packages/tradie-utils-babel/package.json
@@ -7,7 +7,8 @@
   ],
   "dependencies": {
     "babel-core": "^6.24.1",
-    "mkdirp": "^0.5.1"
+    "fs-extra": "^3.0.1",
+    "tradie-utils-group-exec": "^2.0.0"
   },
   "tradie-template": "tradie-template-node-package",
   "scripts": {
