--- a/packages/tradie-example-react-component/package.json
+++ b/packages/tradie-example-react-component/package.json
@@ -2,6 +2,14 @@
   "name": "tradie-example-template-react-component",
   "version": "2.0.0",
   "private": true,
+  "main": "dist/cjs/index.js",
+  "module": "dist/es/index.js",
+  "files": ["dist"],
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "styled-components": "^2.1.1"
+  },
   "devDependencies": {
     "tradie-template-react-component": "*"
   },
