refactor: refactor all the things!

--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,11 @@
 {
-  "lerna": "2.0.0-rc.4",
+  "lerna": "2.0.0",
   "version": "independent",
   "packages": [
     "packages/*"
   ],
   "npmClient": "yarn",
   "command": {
-    "bootstrap": {
-      "hoist": []
-    },
     "publish": {
       "npmTag": "next",
       "message": "chore: publish"
