--- a/packages/tradie-scripts-node-package/package.json
+++ b/packages/tradie-scripts-node-package/package.json
@@ -11,6 +11,7 @@
     "del": "^3.0.0",
     "tradie-utils-babel": "^2.0.0",
     "tradie-utils-eslint": "^2.0.0",
+    "tradie-utils-file": "^2.0.0",
     "tradie-utils-flow": "^2.0.0",
     "tradie-utils-match": "^2.0.0",
     "tradie-utils-jest": "^2.0.0",
