--- a/packages/tradie-template-react-static-site/package.json
+++ b/packages/tradie-template-react-static-site/package.json
@@ -4,10 +4,6 @@
   "description": "Tradie template for building static sites with React.",
   "repository": "jameslnewell/tradie-v4",
   "files": ["lib"],
-  "peerDependencies": {
-    "react": "^15.5",
-    "react-dom": "^15.5"
-  },
   "dependencies": {
     "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
@@ -33,6 +29,8 @@
     "file-loader": "^0.11.1",
     "null-loader": "^0.1.1",
     "postcss-loader": "^1.3.3",
+    "react": "^15.5",
+    "react-dom": "^15.5",
     "react-test-renderer": "^15.5.4",
     "serve-index": "^1.8.0",
     "serve-static": "^1.12.1",
