--- a/packages/tradie-utils-flow/package.json
+++ b/packages/tradie-utils-flow/package.json
@@ -10,7 +10,8 @@
     "flow-bin": "^0.48.0",
     "fs-extra": "^3.0.1",
     "sprintf-js": "^1.1.1",
-    "shell-escape": "^0.2.0"
+    "shell-escape": "^0.2.0",
+    "tradie-utils-group-exec": "^2.0.0"
   },
   "devDependencies": {
     "strip-ansi": "^4.0.0"
