--- a/packages/tradie-utils-reporter/package.json
+++ b/packages/tradie-utils-reporter/package.json
@@ -6,10 +6,11 @@
     "lib"
   ],
   "dependencies": {
-    "chalk": "^1.1.3",
+    "chalk": "^2.0.1",
     "eslint": "^4.0.0",
     "lodash.padstart": "^4.6.1",
     "lodash.trim": "^4.5.1",
+    "lodash.sortby": "^4.7.0",
     "tradie-utils-cli": "^2.0.0"
   },
   "tradie-template": "tradie-template-node-package",
